Update nav component

--- a/frontend/src/stylesheets/reset.css
+++ b/frontend/src/stylesheets/reset.css
@@ -23,7 +23,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 body {
   line-height: 1;
   color: black;
-  background: white;
+  background: #37465B;
 }
 ol, ul {
   list-style: none;
