--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -4,6 +4,16 @@
   height: auto;
   left: 0px;
   top: 0px;
-  background: red;
   padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.loggedIn {
+  background: #F7F7F7;
+}
+
+.loggedOut {
+
 }
