--- a/frontend/src/stylesheets/session.css
+++ b/frontend/src/stylesheets/session.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: auto;
+  margin: 2% auto;
   width: 359px;
   background: #FFFFFF;
   border-radius: 5px;
