--- a/frontend/src/stylesheets/reset.css
+++ b/frontend/src/stylesheets/reset.css
@@ -20,12 +20,16 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 :focus {
   outline: 0;
 }
+
 body {
   line-height: 1;
   color: black;
   background: #37465B;
   font-family: 'Montserrat', sans-serif;
+  width: 100%;
+  height: 100%;
 }
+
 ol, ul {
   list-style: none;
 }
@@ -34,14 +38,17 @@ table {
   border-collapse: separate;
   border-spacing: 0;
 }
+
 caption, th, td {
   text-align: left;
   font-weight: normal;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: "";
 }
+
 blockquote, q {
   quotes: "" "";
 }
@@ -51,5 +58,10 @@ html {
 }
 
 main {
+  height: 100%;
+}
+
+#root {
+  width: 100%;
   height: 100%;
 }
