Add styling for session errors

--- a/frontend/src/stylesheets/session.css
+++ b/frontend/src/stylesheets/session.css
@@ -72,7 +72,7 @@
   color: red;
   display: flex;
   flex-direction: column;
-  padding: 10px 20px;
+  padding: 20px;
   line-height: 1.2em;
   box-sizing: border-box;
   font-size: 14px;
