--- a/frontend/src/stylesheets/session.css
+++ b/frontend/src/stylesheets/session.css
@@ -59,8 +59,14 @@
   box-sizing: border-box;
   border-radius: 50px;
   line-height: 0;
-  font-size: 20px;
+  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: normal;
   cursor: pointer;
+}
+
+.session-form input:last-of-type:hover {
+  border: 2px solid #3BC3FC;
 }
 
 .session-form div:last-of-type{
@@ -72,7 +78,7 @@
   color: red;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  margin: 10px 0px;
   line-height: 1.2em;
   box-sizing: border-box;
   font-size: 14px;
@@ -80,4 +86,22 @@
 
 .session-errors li > span {
   margin-right: 5px;
+}
+
+#demo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 175px;
+  height: 42px;
+  background: #F7F7F7;
+  border: 1px solid #E98A48;
+  box-sizing: border-box;
+  border-radius: 50px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+#demo:hover {
+  border: 2px solid #3BC3FC;
 }
