--- a/frontend/src/stylesheets/create_fups.css
+++ b/frontend/src/stylesheets/create_fups.css
@@ -45,6 +45,12 @@
 
 .checkbox-margin {
   margin: 0 8px 8px 10px;
+  box-shadow: 18px 18px grey inset
+}
+
+.checkbox-margin:checked {
+  background-color: rgba(0, 255, 0, .8);
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, .1) inset;
 }
 
 .create-container {
