--- a/frontend/src/stylesheets/fups_item.css
+++ b/frontend/src/stylesheets/fups_item.css
@@ -1,15 +1,16 @@
-.user-fups-container {
+/* .user-fups-container {
+  display: flex;
+  align-items: center;
+} */
+
+.fups-item-container {
+  width: 550px;
+  padding: 16px 12px;
   margin-top: 30px;
   background-color: #F6F7F6;
   border-radius: 5px;
   height: auto;
-  display: flex;
-  align-items: center;
-  padding: 16px 12px;
-}
 
-.fups-item-container {
-  width: 550px;
 }
 
 .fup-text {
