Amend background size to cover of anon image

--- a/frontend/src/stylesheets/fups_anonymous.css
+++ b/frontend/src/stylesheets/fups_anonymous.css
@@ -1,6 +1,6 @@
 .anon-image {
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   width: 80px;
   height: 70px;
   border-radius: 5px;
