--- a/frontend/src/stylesheets/fups_item.css
+++ b/frontend/src/stylesheets/fups_item.css
@@ -1,16 +1,18 @@
-/* .user-fups-container {
+.user-fups-container {
   display: flex;
   align-items: center;
-} */
+  flex-direction: column;
+  width: 550px;
+}
 
 .fups-item-container {
-  width: 550px;
+  width: 100%;
   padding: 16px 12px;
   margin-top: 30px;
   background-color: #F6F7F6;
   border-radius: 5px;
   height: auto;
-
+  box-sizing: border-box;
 }
 
 .fup-text {
