--- a/frontend/src/stylesheets/fups_item.css
+++ b/frontend/src/stylesheets/fups_item.css
@@ -11,10 +11,6 @@
   margin-top: 30px;
   background-color: #F6F7F6;
   border-radius: 5px;
-  height: auto;
+  min-height: 80px;
   box-sizing: border-box;
-}
-
-.fup-text {
-
 }
