--- a/frontend/src/stylesheets/fups_item.css
+++ b/frontend/src/stylesheets/fups_item.css
@@ -7,7 +7,7 @@
 
 .fups-item-container {
   width: 100%;
-  padding: 16px 12px;
+  padding: 20px;
   margin-top: 30px;
   background-color: #F6F7F6;
   border-radius: 5px;
