--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -1,9 +1,13 @@
+.navbar-master {
+  z-index: 1;
+  width: 100%;
+  position: fixed;
+}
+
 .navbar-container {
-  position: sticky;
+  border-bottom: 1px solid gray;
   width: 100%;
   height: 100%;
-  left: 0px;
-  top: 0px;
   padding: 0;
   display: flex;
   flex-direction: row;
