Fix styling to make session form vertically centered and remove navbar border on loggedout

--- a/frontend/src/stylesheets/session.css
+++ b/frontend/src/stylesheets/session.css
@@ -1,6 +1,6 @@
 .session-main {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
