--- a/frontend/src/stylesheets/fups_anonymous.css
+++ b/frontend/src/stylesheets/fups_anonymous.css
@@ -95,8 +95,40 @@
   font-size: 32px;
   margin: 20px 0px;
   font-weight: bolder;
-  color: rgba(189, 94, 27, 0.589);
+  /* color: rgba(189, 94, 27, 0.589); */
+  color: #E98A48;
   text-shadow: 3px 3px 5px black;
+}
+
+.anon-tabs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 50px;
+  font-size: 20px;
+}
+
+.anon-tabs h1 {
+  margin: 0px 20px;
+  color: #7D9FCC;
+}
+
+.anon-tabs h1:hover {
+  cursor: pointer;
+  border-bottom: 2px solid currentColor;
+}
+
+.currentTab {
+  border-bottom: 2px solid currentColor;
+}
+
+hr {
+  width: 100%;
+  border: 0;
+  height: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .upvote-arrow-container {
