--- a/frontend/src/stylesheets/profile.css
+++ b/frontend/src/stylesheets/profile.css
@@ -43,7 +43,6 @@
   background-color: #F7F7F7;
   width: 20%;
   height: auto;
-  max-height: 370px;
   margin-left: 3vw;
   position: fixed;
   align-self: flex-start;
@@ -59,7 +58,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .bar_graph {
