add trending and style it. Also add small change so links open new tab

--- a/frontend/src/stylesheets/fups_anonymous.css
+++ b/frontend/src/stylesheets/fups_anonymous.css
@@ -78,6 +78,23 @@
   border-radius: 5px;
 }
 
+.trending_list_items {
+  margin: 10px;
+  text-decoration: none;
+  list-style: none;
+  margin-left: 40px;
+}
+
+.trending h1 {
+  margin: 20px;
+  font-weight: bolder;
+  font-size: 18px;
+}
+
+.trending_list_items a {
+  text-decoration: none;
+}
+
 .anon-image-container {
   margin-right: 10px;
 }
