--- a/frontend/src/stylesheets/pie.css
+++ b/frontend/src/stylesheets/pie.css
@@ -5,8 +5,9 @@
 }
 
 .item-border {
-  border: 1px solid black;
+  border: 1.5px solid #F6F7F6;
   width: 50%;
   text-align: center;
   overflow-wrap: break-word;
+  background-color: #E7F1F1;
 }
