--- a/frontend/src/stylesheets/profile.css
+++ b/frontend/src/stylesheets/profile.css
@@ -92,13 +92,13 @@
   margin-bottom: 10px;
 }
 
-.lds-ellipsis {
+.lds-ellipsisp {
   position: relative;
-  left: 50%;
+  left: 0%;
   width: 64px;
   height: 64px;
 }
-.lds-ellipsis div {
+.lds-ellipsisp div {
   position: absolute;
   top: 27px;
   width: 11px;
@@ -107,19 +107,19 @@
   background: #fff;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
-.lds-ellipsis div:nth-child(1) {
+.lds-ellipsisp div:nth-child(1) {
   left: 6px;
   animation: lds-ellipsis1 0.6s infinite;
 }
-.lds-ellipsis div:nth-child(2) {
+.lds-ellipsisp div:nth-child(2) {
   left: 6px;
   animation: lds-ellipsis2 0.6s infinite;
 }
-.lds-ellipsis div:nth-child(3) {
+.lds-ellipsisp div:nth-child(3) {
   left: 26px;
   animation: lds-ellipsis2 0.6s infinite;
 }
-.lds-ellipsis div:nth-child(4) {
+.lds-ellipsisp div:nth-child(4) {
   left: 45px;
   animation: lds-ellipsis3 0.6s infinite;
 }
