Add scroll to tup to fups annon and add css to scroll to top button

--- a/frontend/src/stylesheets/profile.css
+++ b/frontend/src/stylesheets/profile.css
@@ -149,3 +149,12 @@
     transform: translate(19px, 0);
   }
 }
+
+.ScrollUpButton__Container {
+  background-color: transparent !important;
+}
+
+.ScrollUpButton__Toggled {
+  background-color: transparent;
+}
+
