--- a/frontend/src/stylesheets/profile.css
+++ b/frontend/src/stylesheets/profile.css
@@ -50,6 +50,20 @@
   border-radius: 4px;
 }
 
+@media (max-width: 900px) {
+  .upper_page {
+    justify-content: center;
+  }
+
+  .user_data_container{
+    margin-left: 0;
+  }
+
+  .suggestion_box {
+    display: none;
+  }
+}
+
 .suggestion_height {
   line-height: 22px;
 }
