--- a/frontend/src/stylesheets/profile.css
+++ b/frontend/src/stylesheets/profile.css
@@ -51,13 +51,14 @@
   overflow: hidden;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1200px) {
   .upper_page {
     justify-content: center;
   }
 
   .user_data_container{
     margin-left: 0;
+    width: 80%;
   }
 
   .suggestion_box {
